# poetry-package-sandbox

./: .gitignore  LICENSE  README.md  pyproject.toml
calculator/: __init__.py  advanced.py  calculator.py
examples/: README.md  advanced_api_usage.py  advanced_usage.py  basic_usage.py  batch_processing.py  cli_examples.sh  pyproject.toml
simple_calculator/: __init__.py  advanced.py  calculator.py  cli.py
src/: __init__.py  calculator.py
src/cal/: calculator.py
temp_extract/: calculator.py
temp_extract/cal/: __init__.py
temp_extract/calculator/: __init__.py
temp_extract/calculator-0.1.0.dist-info/: METADATA  RECORD  entry_points.txt
tests/: __init__.py  test_calculator.py  test_cli.py
