[tool.poetry]
name = "simple-calculator"
version = "0.1.0"
description = "A simple calculator package with basic arithmetic operations"
authors = ["Takeshi Iijima <takeshi.iijima@example.com>"]
readme = "README.md"

repository = "https://github.com/tkc/poetry-package-sandbox"
license = "MIT"

packages = [
    { include = "src/**/*.py" },
]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.24.0"
pydantic = "^2.4.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
ruff = "^0.1.5"
mypy = "^1.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
calculate = "src.cli:main"
calc-advanced = "src.advanced:main"

[tool.ruff]
target-version = "py38"
line-length = 88
src = ["src", "tests"]

# Linterのルール
[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "I",  # isort
    "UP", # pyupgrade
    "N",  # pep8-naming
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
    "A",  # flake8-builtins
    "COM", # flake8-commas
    "T20", # flake8-print
    "PT", # flake8-pytest-style
    "RET", # flake8-return
    "SIM", # flake8-simplify
]

# 無視するルール
ignore = [
    "E501",  # line too long (handled by formatter)
    "COM812", # Trailing comma missing (conflicts with formatter)
]

# フォーマッターの設定
[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
skip-magic-trailing-comma = false
