[tool.poetry]
package-mode = false
name = "simple-calculator-examples"
version = "0.1.0"
description = "Examples for the simple-calculator package"
authors = ["Takeshi Iijima <takeshi.iijima@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
calculator = {git = "https://github.com/tkc/poetry-package-sandbox.git"}
